fixed the url for github and email

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>William Bucher</h1>
         <h2>
             <p>(262) 354-4095 </p>
-            <p><a href="mailto:wbucher@live.unc.edu?subject=Resume Inquery">wjbucher3@gmail.com</a></p>
+            <p><a href="mailto:wjbucher3@gmail.com?subject=Resume Inquery">wjbucher3@gmail.com</a></p>
             
         </h2>
     </header>
@@ -60,7 +60,7 @@
                 <p>
                     <strong>TwitterBot</strong> <br>
                     June 2020 <br>
-                    <a href="https://www.github.com/wbucher/frogBot/" target="_blank"> Project on Github</a>
+                    <a href="https://www.github.com/wbucher3/frogBot/" target="_blank"> Project on Github</a>
 
                 </p>
                 
