added career goal box

--- a/index.html
+++ b/index.html
@@ -21,8 +21,17 @@
     </header>
 
     <div id="main">
-        <div class="row">
 
+	<div class="row">
+	    <div class="TitleCard">
+		<h3>Career Objective</h3>
+        <p>
+            This is where I will write my career objectives. I am looking for work. Please hire me.
+        </p>
+	    </div>
+
+	</div>
+        <div class="row">
             <div class="card">
                 <h3>Education</h3>
                 <p><strong>University of North Carolina at Chapel Hill</strong></p>
