added spring classes

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
                     <li>Computer Organization</li>
                     <li>Models of Language/Computing</li>
                     <li>Discrete Structures</li>
+                    <li>Programming Languages</li>
+                    <li>Computational Photography</li>
                 </ul>
             </div>
 
